[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "decorator==4.4.2",
    "email-validator>=2.2.0",
    "flask==2.3.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "imageio-ffmpeg==0.4.8",
    "imageio==2.31.1",
    "moviepy==1.0.3",
    "numpy==1.24.3",
    "psycopg2-binary>=2.9.10",
    "requests==2.31.0",
    "werkzeug==2.3.7",
    "tqdm==4.65.0",
    "pillow==10.0.0",
    "trafilatura>=2.0.0",
    "pytube==15.0.0",
    "twilio>=9.4.5",
    "yt-dlp>=2025.1.26",
]
